# LegacyMachine

./: .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md  vcpkg-configuration.json  vcpkg.json
modules/: FindOpenGLES.cmake
source/Dependencies/GLAD/include/glad/: glad.h
source/Dependencies/GLAD/source/: glad.c
source/Examples/VirtualConsole/: BasicGameSelect.cpp  BasicGameSelect.h  BasicMachine.cpp  BasicMachine.h  BasicMenu.cpp  BasicMenu.h  BasicScreen.cpp  BasicScreen.h  CMakeLists.txt  Common.h  VirtualConsole.cpp
source/Examples/VirtualConsole/Assets/: Menu.tmx  Menu.tsx  Startup.tmx  dir.txt
source/Examples/VirtualConsole/Saves/: dir.txt
source/Examples/VirtualConsole/Settings/: Games.csv
source/Examples/VirtualConsole/System/: dir.txt
source/Examples/VirtualFamicom/: CMakeLists.txt  Common.h  FamicomGameIcon.cpp  FamicomGameIcon.h  FamicomGameSelect.cpp  FamicomGameSelect.h  FamicomMachine.cpp  FamicomMachine.h  FamicomMenu.cpp  FamicomMenu.h  FamicomPalette.cpp  FamicomPalette.h  FamicomScreen.cpp  FamicomScreen.h  VirtualFamicom.cpp
source/Examples/VirtualFamicom/Assets/: Menu_0.tmx  Menu_1.tmx  Menu_1.tsx  Startup.tsx  Startup_0_J.tmx  Startup_0_U.tmx
source/Examples/VirtualFamicom/Content/: dir.txt
source/Examples/VirtualFamicom/Cores/: dir.txt
source/Examples/VirtualFamicom/Settings/: Games.csv  dir.txt
source/Examples/VirtualFamicom/States/: dir.txt
source/Examples/VirtualMachine/: CMakeLists.txt  ContentOption.cpp  ContentOption.h  MenuOption.cpp  MenuOption.h  VirtualMachine.cpp
source/Examples/VirtualMachine/include/: IMachine.h  VirtualMachine.h
source/LegacyMachine/: CMakeLists.txt  CoreLibrary.h  LegacyMachine.c  Logging.h  MainEngine.h  SettingsManager.c  SettingsManager.h  SystemManager.c  SystemManager.h  Window.c  legacymachine.pc.in
source/LegacyMachine/Audio/: AudioDriver.c  AudioDriver.h
source/LegacyMachine/Audio/Drivers/: SDL2_AudioDriver.c
source/LegacyMachine/Common/: Common.h  GL_Common.c  GL_Common.h  SDL2_Common.c  SDL2_Common.h
source/LegacyMachine/Input/: InputDriver.c  InputDriver.h
source/LegacyMachine/Input/Drivers/: SDL2_InputDriver.c
source/LegacyMachine/Menu/: MenuManager.c  MenuManager.h
source/LegacyMachine/Platform/: PlatformDriver.c  PlatformDriver.h
source/LegacyMachine/Platform/Drivers/: MacOS_PlatformDriver.m  Unix_PlatformDriver.c  Win32_PlatformDriver.c
source/LegacyMachine/Video/: CRTFilter.c  CRTFilter.h  VideoDriver.c  VideoDriver.h
source/LegacyMachine/Video/Drivers/: SDL2_VideoDriver.c
source/LegacyMachine/Video/Filters/: RFBlur.c  SDL2_CRTFilter.c  SDL2_CRTFilter.h
source/LegacyMachine/Video/Shared/: GL_Shared.c  GL_Shared.h
source/LegacyMachine/Window/: WindowDriver.c  WindowDriver.h
source/LegacyMachine/Window/Drivers/: SDL2_WindowDriver.c
source/LegacyMachine/include/: LegacyMachine.h
source/Libretro/include/: retro_library.h
source/Tilengine/: CMakeLists.txt
source/Tilengine/include/: Tilengine.h
